# datasalad

./: .appveyor.yml  .changelog.md.j2  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: conventional-commits.yml  mypy-pr.yml  mypy-project.yml  ruff.yml
datasalad/: __init__.py  dummy.py
datasalad/gitpathspec/: __init__.py  pathspec.py  pathspecs.py
datasalad/gitpathspec/tests/: test_gitpathspec.py
datasalad/iterable_subprocess/: __init__.py  iterable_subprocess.py  test_iterable_subprocess.py
datasalad/itertools/: __init__.py  align_pattern.py  decode_bytes.py  itemize.py  load_json.py  reroute.py
datasalad/itertools/tests/: test_align_pattern.py  test_decode_bytes.py  test_itemize.py  test_load_json.py  test_reroute.py
datasalad/runners/: __init__.py  exception.py  iter_subproc.py
datasalad/runners/tests/: test_exception.py  test_iter_subproc.py
datasalad/settings/: __init__.py  defaults.py  env.py  setting.py  settings.py  source.py
datasalad/settings/tests/: test_defaults.py  test_env.py  test_setting.py  test_settings.py  test_source.py
datasalad/tests/: fixtures.py
docs/: conf.py  index.rst
